[tool.poetry]
name = "readmdict"
version = "0.1.1"
description = "readmdict (simple repacking of readmdict in mdict-analysis)"
authors = ["freemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/readmdict"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.scripts]
readmdict = "readmdict.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
